--- a/accounts/templates/accounts/password_reset.html
+++ b/accounts/templates/accounts/password_reset.html
@@ -1,16 +1,42 @@
 {% extends "datadump/base.html" %}
-{% load crispy_forms_tags %}
-{% block content %}
-    <div class="content-section">
-        <form method="POST">
-            {% csrf_token %}
-            <fieldset class="form-group">
-                <legend class="border-bottom mb-4">Reset Password</legend>
-                {{ form|crispy }}
-            </fieldset>
-            <div class="form-group">
-                <button class="btn btn-outline-info" type="submit">Request Password Reset</button>
+{% load static %}
+{% block title %}Reset Password{% endblock %}
+{% block dashboard %}
+<link rel="stylesheet" href="{% static 'datadump/styles/login-form.css' %}">
+{% if form.errors %}
+<div class="alert alert-danger alert-dismissible fade show" role="alert">
+    Wrong username or password!
+    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+        <span aria-hidden="true">&times;</span>
+    </button>
+</div>
+{% endif %}
+<main class="main">
+    <div class="form-container">
+        <section class="wrapper">
+            <div class="heading">
+                <h1 class="text text-large">Reset Password</h1>
+                <p class="text text-normal">Enter email to reset your password</p>
             </div>
-        </form>
+            <form name="login" class="form" method="POST">
+                {% csrf_token %}
+                {% for item in form %}
+                <div class="input-control">
+                    {{ item }}
+                </div>
+                {% endfor %}
+                <div class="input-control">
+                    <small>Remember Password?<a href="{% url 'login' %}" class="text text-links"> Log In</a></small>
+                    <button type="submit" name="submit" class="input-submit">Request Password Reset</button>
+                </div>
+            </form>
+        </section>
     </div>
-{% endblock content %}
+</main>
+<script>
+    $(document).ready(function(){
+        $("#id_email").attr('placeholder', 'Email');
+    });
+
+</script>
+{% endblock %}
