--- a/accounts/templates/accounts/password_reset_complete.html
+++ b/accounts/templates/accounts/password_reset_complete.html
@@ -1,7 +1,11 @@
 {% extends "datadump/base.html" %}
-{% block content %}
+{% load static %}
+{% block title %}Reset Password{% endblock %}
+{% block navbar %}{% include "datadump/post/navbar.html" %}{% endblock %}
+{% block dashboard %}
     <div class="alert alert-info">
         Your password has been set.
     </div>
-    <a href="{% url 'login' %}">Sign In Here</a>
-{% endblock content %}
+    <a href="{% url 'login' %}">Log In Here</a>
+{% endblock %}
+{% block footer %}{% include "datadump/post/footer.html" %}{% endblock %}
