--- a/accounts/templates/accounts/password_reset_done.html
+++ b/accounts/templates/accounts/password_reset_done.html
@@ -1,6 +1,10 @@
 {% extends "datadump/base.html" %}
-{% block content %}
+{% load static %}
+{% block title %}Reset Password{% endblock %}
+{% block navbar %}{% include "datadump/post/navbar.html" %}{% endblock %}
+{% block dashboard %}
     <div class="alert alert-info">
         An email has been sent with instructions to reset your password
     </div>
-{% endblock content %}
+{% endblock %}
+{% block footer %}{% include "datadump/post/footer.html" %}{% endblock %}
