--- a/datadump/templates/datadump/base.html
+++ b/datadump/templates/datadump/base.html
@@ -27,166 +27,22 @@
     <link rel="stylesheet" href="{% static 'datadump/styles/base.css' %}">
 </head>
 <body>
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <a class="navbar-brand" href="/datadump"><img src="{% static 'datadump/images/logo_bibliostack.png' %}"
-                                                  height="30px" class="logo"></a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
-            aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNavDropdown">
-        <ul class="navbar-nav mr-auto">
-            <li class="nav-item">
-                <a class="nav-link" href="/datadump">Home</a>
-
-            <li class="nav-item">
-                <a class="nav-link" href="/datadump/create-post">Ask Question</a>
-            </li>
-        </ul>
-        <ul class="navbar-nav">
-            <form class="form-inline" method="get" action="/datadump/search">
-                <input class="form-control autocomplete" type="search" placeholder="Search" aria-label="Search"
-                       name="search"
-                       autocomplete="off"
-                       value="{{ search }}" required id="search">
-
-                <button class="btn btn-primary my-2 my-sm-0" type="submit">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
-                         class="bi bi-search" viewBox="0 0 16 16">
-                        <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z"/>
-                    </svg>
-                </button>
-            </form>
-            {% if user.is_authenticated %}
-            <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown"
-                   aria-haspopup="true" aria-expanded="false">
-                    <img src="{{ user.profile.image.url }}" height="25px" style="border-radius: 50%">
-                </a>
-                <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink">
-                    <a class="dropdown-item" href="/accounts/profile/{{ user.id }}">Profile</a>
-                    <a class="dropdown-item" href="/accounts/logout">Log Out</a>
-                </div>
-            </li>
-            {% else %}
-            <li class="nav-item">
-                <a class="nav-link" href="/accounts/login">Log In</a>
-            </li>
-            {% endif %}
-        </ul>
-    </div>
-</nav>
+{% block navbar %}{% endblock %}
 {% if messages %}
-    {% for message in messages %}
-    <div class="alert alert-{% if message.tags %}{% if message.tags == 'error' %}danger{% else %}{{ message.tags }}{% endif %}{% endif %} alert-dismissible fade show" role="alert">
-        {{ message }}
-        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-            <span aria-hidden="true">&times;</span>
-        </button>
-    </div>
-    {% endfor %}
+{% for message in messages %}
+<div class="alert alert-{% if message.tags %}{% if message.tags == 'error' %}danger{% else %}{{ message.tags }}{% endif %}{% endif %} alert-dismissible fade show"
+     role="alert">
+    {{ message }}
+    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+        <span aria-hidden="true">&times;</span>
+    </button>
+</div>
+{% endfor %}
 {% endif %}
 <div class="content-body">
-    <div class="row">
-        <div id="content" class="content">
-            {% block content %}
-            {% endblock %}
-        </div>
-        <div id="sidebar" class="sidebar">
-            {% block sidebar %}
-            {% endblock %}
-        </div>
-    </div>
+    {% block dashboard %}{% endblock %}
 </div>
-<footer>
-    <div class="container">
-        <div class="row">
-            <div class="col-sm-4">
-                <a href="/datadump" style="color: white;">BiblioStack</a> is the next platform to learn and help those
-                learning. We can add something else cause I don't
-                know
-                to say. But yeah, it's going to be great :)
-            </div>
-            <div class="col-sm-4">
-                Copyright © 2021 BiblioStack, Inc.
-            </div>
-            <div class="col-sm-4">
-                <span class="fa fa-facebook"></span>
-                <span class="fa fa-instagram"></span>
-                <span class="fa fa-youtube"></span>
-                <span class="fa fa-twitter"></span>
-            </div>
-            <div class="col-sm-4">
-                <h3>Bibliostack</h3>
-                <ul>
-                    <li>Company</li>
-                    <li>Our Team</li>
-                    <li>Our Process</li>
-                </ul>
-            </div>
-            <div class="col-sm-4">
-                <h3>Our Info</h3>
-                <p><span class="fa fa-phone"></span> +38344999999</p>
-                <p><span class="fa fa-envelope"></span> support@bibliostack.com</p>
-                <p><span class="fa fa-map-marker"></span> Prishtina, Kosovo</p>
-            </div>
-            <div class="col-sm-4">
-                <button type="button" class="btn btn-secondary" data-toggle="modal" data-target="#exampleModal">
-                    Contact Us
-                </button>
-                <small class="form-text text-muted">Send a direct message to our team!</small>
-            </div>
-        </div>
-    </div>
-</footer>
-
-
-<!-- Modal -->
-<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-    <div class="modal-dialog modal-dialog-scrollable modal-lg">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h5 class="modal-title" id="exampleModalLabel">Contact Us</h5>
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                </button>
-            </div>
-            <form method="POST" id="contact-form">
-                {% csrf_token %}
-                <div class="modal-body">
-                    <div class="row">
-                        <div class="col-sm-6">
-                            <label>First name</label>
-                            <input class="form-input" type="text" name="first" required>
-                        </div>
-                        <div class="col-sm-6">
-                            <label>Last name</label>
-                            <input class="form-input" type="text" name="last" required>
-                        </div>
-                        <div class="w-100"></div>
-                        <div class="col-sm-6">
-                            <label>Email</label>
-                            <input class="form-input" type="email" name="email" required>
-                        </div>
-                        <div class="col-sm-6">
-                            <label>Phone Number</label>
-                            <input class="form-input" type="tel" name="phone" required>
-                        </div>
-                    </div>
-                    <label>Message</label>
-                    <textarea class="form-input" name="message" required cols="60" rows="4" minlength="10"></textarea>
-                    <small class="form-text text-muted">Write what we can do to help you!</small>
-
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                    <button type="submit" class="btn btn-primary" name="contact_us">Submit</button>
-                </div>
-            </form>
-
-        </div>
-    </div>
-</div>
+{% block footer %}{% endblock %}
 <script>
 $(function() {
     var availableTags = [{% for item in all_posts %}"{{ item.title }}",{% endfor%}
