--- a/datadump/templates/datadump/post/detail.html
+++ b/datadump/templates/datadump/post/detail.html
@@ -2,119 +2,85 @@
 {% load datadump_tags %}
 
 {% block title %}Post | {{ post.title }}{% endblock %}
-
-{% block content %}
-<div class="container my-4">
-    <div class="card">
-        <div class="card-header">
-            <h3>{{ post.title }}</h3>
+{% block navbar %}{% include "datadump/post/navbar.html" %}{% endblock %}
+{% block dashboard %}
+<div class="row">
+    <div id="content" class="content">
+        <div class="container my-4">
+            <div class="card">
+                <div class="card-header">
+                    <h3>{{ post.title }}</h3>
+                </div>
+                <div class="card-body">
+                    {% with post.body|markdown|safe as body %}
+                    <p>{{ body }}</p>
+                    {% endwith %}
+                    <h6><a href="/accounts/profile/{{post.author.id}}"><b class="user-bold">@{{ post.author }}</b></a> -
+                        {{post.publish}}</h6>
+                    {% for tag in post.tags.all %}
+                    <a href="/datadump/tag/{{tag.slug}}">
+                        <button class="btn btn-primary btn-tag" data-toggle="tooltip" data-placement="bottom"
+                                title="This is the {{ tag.name }} tag">{{tag}}
+                        </button>
+                    </a>
+                    {% endfor %}
+                </div>
+            </div>
+            {% if user == post.author %}
+            <hr>
+            <form method="post">
+                {% csrf_token %}
+                <a href="{{ post.get_absolute_url }}update/">
+                    <button class="btn btn-info" type="button">Update Question</button>
+                </a>
+                <button class="btn btn-danger float-right" type="submit" name="delete_post">Delete Question</button>
+            </form>
+            {% endif %}
+            <hr>
         </div>
-        <div class="card-body">
-            {% with post.body|markdown|safe as body %}
-            <p>{{ body }}</p>
-            {% endwith %}
-            <h6><a href="/accounts/profile/{{post.author.id}}"><b class="user-bold">@{{ post.author }}</b></a> - {{post.publish}}</h6>
-            {% for tag in post.tags.all %}
-            <a href="/datadump/tag/{{tag.slug}}">
-                <button class="btn btn-primary btn-tag" data-toggle="tooltip" data-placement="bottom"
-                        title="This is the {{ tag.name }} tag">{{tag}}
-                </button>
-            </a>
+        <div class="container-lg">
+            {% for comment in comments %}
+            <div class="jumbotron">
+                <h4>Comment {{ forloop.counter }} by {{ comment.name }}</h4>
+                <hr>
+                <p>
+                    {{ comment.body }}
+                </p>
+                <b style="float: left;" class="user-bold">@{{ comment.name }}</b> <i style="float: right;">{{ comment.created }}</i>
+            </div>
+            {% empty %}
+            <p>There are no comments yet.</p>
             {% endfor %}
         </div>
-    </div>
-    {% if user == post.author %}
-    <hr>
-    <form method="post">
-        {% csrf_token %}
-        <a href="{{ post.get_absolute_url }}update/"><button class="btn btn-info" type="button">Update Question</button></a>
-        <button class="btn btn-danger float-right" type="submit" name="delete_post">Delete Question</button>
-    </form>
-    {% endif %}
-    <hr>
-</div>
-<div class="container-lg">
-    {% for comment in comments %}
-    <div class="jumbotron">
-        <h4>Comment {{ forloop.counter }} by {{ comment.name }}</h4>
-        <hr>
-        <p>
-            {{ comment.body }}
-        </p>
-        <b style="float: left;" class="user-bold">@{{ comment.name }}</b> <i style="float: right;">{{ comment.created }}</i>
-    </div>
-    {% empty %}
-    <p>There are no comments yet.</p>
-    {% endfor %}
-</div>
-<div class="container-fluid">
-    <hr>
-    <h3>Your Answer</h3>
-    <hr>
-    <form method="POST" id="contact-form">
-        {% csrf_token %}
-        {% if not user.is_authenticated %}
-        <div class="row">
-            <div class="col-sm-6">
-                <label>Full name</label>
-                <input class="form-input" type="text" name="name">
-            </div>
-            <div class="col-sm-6">
-                <label>Email</label>
-                <input class="form-input" type="email" name="email">
-            </div>
+        <div class="container-fluid">
+            <hr>
+            <h3>Your Answer</h3>
+            <hr>
+            <form method="POST" id="contact-form">
+                {% csrf_token %}
+                {% if not user.is_authenticated %}
+                <div class="row">
+                    <div class="col-sm-6">
+                        <label>Full name</label>
+                        <input class="form-input" type="text" name="name">
+                    </div>
+                    <div class="col-sm-6">
+                        <label>Email</label>
+                        <input class="form-input" type="email" name="email">
+                    </div>
+                </div>
+                {% endif %}
+                <div class="form-group">
+                    <label>Comment</label>
+                    <textarea class="form-input" name="comment" required cols="60" rows="4" minlength="10"></textarea>
+                    <small class="form-text text-muted">Write something helpful about this problem!</small>
+                </div>
+                <button class="btn btn-primary" type="submit" name="add_comment">Post Your Answer</button>
+            </form>
+            <hr>
         </div>
-        {% endif %}
-        <div class="form-group">
-            <label>Comment</label>
-            <textarea class="form-input" name="comment" required cols="60" rows="4" minlength="10"></textarea>
-            <small class="form-text text-muted">Write something helpful about this problem!</small>
-        </div>
-        <button class="btn btn-primary" type="submit" name="add_comment">Post Your Answer</button>
-    </form>
-    <hr>
+    </div>
+    {% include "datadump/post/sidebar.html" %}
 </div>
 {% endblock %}
-{% block sidebar %}
-<div class="container my-4">
-    <div class="card bg-dark text-white">
-        <div class="card-header">
-            <h3>Latest Posts</h3>
-        </div>
-        <div class="card-body">
-            {% get_latest_posts 5 as posts %}
-            {% for post in posts %}
-            <a href="{{ post.get_absolute_url }}">
-                <p>• {{ post.title }}</p>
-            </a>
-            {% endfor %}
-        </div>
-    </div>
-    <div class="card bg-info text-white">
-        <div class="card-header">
-            <h3>Top Used Tags</h3>
-        </div>
-        <div class="card-body">
-            {% get_most_tags 5 as tags %}
-            {% for item in tags %}
-            <a href="/datadump/tag/{{ item.slug }}">
-                <p>• {{ item.name }}</p>
-            </a>
-            {% endfor %}
-        </div>
-    </div>
-    <div class="card bg-warning text-white">
-        <div class="card-header">
-            <h3>Top Commented Posts</h3>
-        </div>
-        <div class="card-body">
-            {% get_most_commented_posts 5 as comments %}
-            {% for post in comments %}
-            <a href="{{ post.get_absolute_url }}">
-                <p>• {{ post.title }}</p>
-            </a>
-            {% endfor %}
-        </div>
-    </div>
-</div>
-{% endblock %}
+{% block footer %}{% include "datadump/post/footer.html" %}{% endblock %}
