--- a/datadump/templates/datadump/post/list.html
+++ b/datadump/templates/datadump/post/list.html
@@ -2,77 +2,41 @@
 {% load datadump_tags %}
 
 {% block title %}Home{% endblock %}
-
-{% block content %}
-{% if not tag == None %}
-    <h2 style="text-align: center">{{ tag }}</h2>
-{% endif %}
-<div class="container my-4">
-    {% for post in posts %}
-    <div class="card">
-        <a href="{{ post.get_absolute_url }}">
-            <div class="card-header">
-                <h3>{{ post.title }}</h3>
-            </div>
-        </a>
-        <div class="card-body">
-            {% with post.body|markdown|safe as body %}
-            <p>{{ body }}</p>
-            {% endwith %}
-            <h6><a href="/accounts/profile/{{post.author.id}}"><b class="user-bold">@{{ post.author }}</b></a> - {{ post.publish }}</h6>
-            {% for tag in post.tags.all %}
-            <a href="/datadump/tag/{{ tag.slug }}">
-                <button class="btn btn-primary btn-tag" data-toggle="tooltip" data-placement="bottom"
-                        title="This is the {{ tag.name }} tag">{{ tag }}
-                </button>
-                {% endfor %}
-            </a>
-        </div>
-    </div>
-    {% endfor %}
-</div>
-{% include "pagination.html" with page=posts %}
-{% endblock %}
-{% block sidebar %}
-<div class="container my-4">
-    <div class="card bg-dark text-white">
-        <div class="card-header">
-            <h3>Latest Posts</h3>
-        </div>
-        <div class="card-body">
-            {% get_latest_posts 5 as posts %}
+{% block navbar %}{% include "datadump/post/navbar.html" %}{% endblock %}
+{% block dashboard %}
+<div class="row">
+    <div id="content" class="content">
+        {% if not tag == None %}
+        <h2 style="text-align: center">{{ tag }}</h2>
+        {% endif %}
+        <div class="container my-4">
             {% for post in posts %}
-            <a href="{{ post.get_absolute_url }}">
-                <p>• {{ post.title }}</p>
-            </a>
+            <div class="card">
+                <a href="{{ post.get_absolute_url }}">
+                    <div class="card-header">
+                        <h3>{{ post.title }}</h3>
+                    </div>
+                </a>
+                <div class="card-body">
+                    {% with post.body|markdown|safe as post_body %}
+                    <p>{{ post_body|truncatewords_html:15 }}</p>
+                    {% endwith %}
+                    <h6><a href="/accounts/profile/{{post.author.id}}"><b class="user-bold">@{{ post.author }}</b></a> -
+                        {{ post.publish }}</h6>
+                    {% for tag in post.tags.all %}
+                    <a href="/datadump/tag/{{ tag.slug }}">
+                        <button class="btn btn-primary btn-tag" data-toggle="tooltip" data-placement="bottom"
+                                title="This is the {{ tag.name }} tag">{{ tag }}
+                        </button>
+                        {% endfor %}
+                    </a>
+                </div>
+            </div>
             {% endfor %}
         </div>
+        {% include "pagination.html" with page=posts %}
     </div>
-    <div class="card bg-info text-white">
-        <div class="card-header">
-            <h3>Top Used Tags</h3>
-        </div>
-        <div class="card-body">
-            {% get_most_tags 5 as tags %}
-            {% for item in tags %}
-            <a href="/datadump/tag/{{ item.slug }}">
-                <p>• {{ item.name }}</p>
-            </a>
-            {% endfor %}
-        </div>
-    </div>
-    <div class="card bg-warning text-white">
-        <div class="card-header">
-            <h3>Top Commented Posts</h3>
-        </div>
-        <div class="card-body">
-            {% get_most_commented_posts 5 as comments %}
-            {% for post in comments %}
-            <a href="{{ post.get_absolute_url }}">
-                <p>• {{ post.title }}</p>
-            </a>
-            {% endfor %}
-        </div>
-    </div>
+    {% include "datadump/post/sidebar.html" %}
 </div>
 {% endblock %}
+{% block footer %}{% include "datadump/post/footer.html" %}{% endblock %}
